<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_faqiqunliao"
        style="@style/menuItems_layout">

        <ImageView
            style="@style/menuItems_image"
            android:src="@drawable/menu_faqiqunliao" />

        <TextView
            style="@style/menuItems_text"
            android:text="@string/menu_faqiqunliao" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/module_menu_item_line_color" />

    <LinearLayout
        android:id="@+id/ll_tianjiapengyou"
        style="@style/menuItems_layout">

        <ImageView
            style="@style/menuItems_image"
            android:src="@drawable/menu_tianjiapengyou" />

        <TextView
            style="@style/menuItems_text"
            android:text="@string/menu_tianjiapengyou" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/module_menu_item_line_color" />

    <LinearLayout
        android:id="@+id/ll_saoyisao"
        style="@style/menuItems_layout">

        <ImageView
            style="@style/menuItems_image"
            android:src="@drawable/menu_saoyisao" />

        <TextView
            style="@style/menuItems_text"
            android:text="@string/menu_saoyisao" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/module_menu_item_line_color" />

    <LinearLayout
        android:id="@+id/ll_shoufukuan"
        style="@style/menuItems_layout">

        <ImageView
            style="@style/menuItems_image"
            android:src="@drawable/menu_shoufukuan" />

        <TextView
            style="@style/menuItems_text"
            android:text="@string/menu_shoufukuan" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/module_menu_item_line_color" />

    <LinearLayout
        android:id="@+id/ll_bangzhu"
        style="@style/menuItems_layout">

        <ImageView
            style="@style/menuItems_image"
            android:src="@drawable/menu_bangzhu" />

        <TextView
            style="@style/menuItems_text"
            android:text="@string/menu_bangzhu" />
    </LinearLayout>


</LinearLayout>
